# BodyTempSensor

./: .gitignore  Body Temp Blockdiagram.drawio  BodyTempSens_Data.xlsx  BodyTempSensor_Calculations.xlsx  Invertory BOM.xlsx
Firmware/biometric-wearable/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  west.yml
Firmware/biometric-wearable/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
Firmware/biometric-wearable/boards/bodytemp_wearable/: Kconfig.bodytemp_wearable  Kconfig.defconfig  board.yml  bodytemp_wearable-pinctrl.dtsi  bodytemp_wearable.dts  bodytemp_wearable.yaml  bodytemp_wearable_defconfig
Firmware/biometric-wearable/dts/bindings/: README.md
Firmware/biometric-wearable/src/: main.c
Firmware/biometric-wearable/src/app/: app_config.h  app_data.h  app_state.c  app_state.h
Firmware/biometric-wearable/src/hmi/: buttons.c  buttons.h  leds.c  leds.h  status_led.c  status_led.h
Firmware/biometric-wearable/src/radio/: ant_profile.c  ant_profile.h  ble_service.c  ble_service.h
Firmware/biometric-wearable/src/sensors/: eda_gsr.c  eda_gsr.h  heatflux.c  heatflux.h  temp_tmp117.c  temp_tmp117.h
Firmware/biometric-wearable/src/util/: battery.c  battery.h  log_cfg.h
KiCad/: BodyTempSensor.csv  BodyTempSensor.kicad_dru  BodyTempSensor.kicad_pcb  BodyTempSensor.kicad_pro  BodyTempSensor.kicad_sch
